BUG: Preserve white space in filler element for inline input.

--- a/frontend/src/components/inline_input.css
+++ b/frontend/src/components/inline_input.css
@@ -11,6 +11,7 @@
 .inline-input-filler {
     display: inline-block;
     visibility: hidden;
+    white-space-collapse: preserve;
     min-width: 1ex;
 }
 
